--- a/package.json
+++ b/package.json
@@ -3,5 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "KAY S <KS.KWANRUAN@GMAIL.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": "10.15.3",
+    "yarn": "1.15.2"
+  },
+  "scripts": {
+    "build": "yarn --cwd web install && yarn --cwd web build",
+    "deploy": "cp -a web/build/. public/",
+    "heroku-postbuild": "yarn build && yarn deploy"
+  }
 }
